--- a/app/src/assets/css/style.scss
+++ b/app/src/assets/css/style.scss
@@ -788,6 +788,19 @@ a:focus {
 
 // end client section
 
+.Mui-disabled {
+  color: rgba(0, 0, 0, 0.2) !important;
+}
+
+.Mui-selected {
+  background-color: $primary2 !important;
+  color: $white !important;
+}
+
+button:focus {
+  outline-color: $primary2 !important;
+}
+
 /* contact section */
 .contact_section {
   position: relative;
@@ -831,8 +844,28 @@ a:focus {
       }
     }
 
-    .country-select {
+    .mui-input {
+      width: 100%;
       margin-bottom: 20px;
+
+      .MuiInputBase-root {
+        border-radius: 0;
+      }
+
+      &.date-picker {
+        .MuiInputAdornment-root {
+          margin-right: 2px;
+        }
+        
+        .MuiSvgIcon-root {
+          width: 18px;
+          height: 18px;
+        }
+      }
+
+      button:focus {
+        outline: none;
+      }
 
       & > div > div {
         border: none;
@@ -1138,13 +1171,16 @@ input.password-field:focus ~ .password-validation {
 
     .icon {
       position: absolute;
-      right: 10px;
+      right: 5px;
       top: 22px;
       transform: translateY(-50%);
       cursor: pointer;
+      color: rgb(117 117 117);
+      padding: 8px;
+      border-radius: 50%;
 
       &:hover {
-        opacity: 0.7;
+        background-color: rgba(0 0 0 / 4%);
       }
     }
   }
